# Descent3

./: #.clang-format#  .clang-format  .clang-format-ignore  .editorconfig  .gitattributes  .gitignore  .gitmodules  BUILD.md  Brewfile  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Descent3.sln  LICENSE  README.md  THIRD_PARTY.md  USAGE.md  build.gradle  gplheader  lint.bat  lint.sh  vcpkg-configuration.json  vcpkg.json
2dlib/: CMakeLists.txt  ddgr.h  font.cpp  gr.h  hardsurf.cpp  lib2d.h  memsurf.cpp  pen.cpp  pentext.cpp  screen.cpp  surface.cpp  viewport.cpp
AngelScript/: CMakeLists.txt
AudioEncode/: CMakeLists.txt  adecode.cpp  adecode.h  aencode.cpp  aencode.h  audio_encode.cpp  audio_encode.h  encoder.cpp
Descent3/: AIGoal.cpp  AIGoal.h  AIMain.h  AImain.cpp  BOA.cpp  BOA.h  Briefing.cpp  Briefing.h  BriefingParse.cpp  BriefingParse.h  CMakeLists.txt  ConfigItem.cpp  ConfigItem.h  Controls.cpp  CtlCfgElem.cpp  CtlCfgElem.h  D3ForceFeedback.cpp  D3ForceFeedback.h  DeathInfo.h  Descent3.exe.manifest.in  Descent3.icns  Descent3.rc  Descent3.rc.in  DllWrappers.cpp  DllWrappers.h  Game2DLL.cpp  GameCheat.cpp  GameLoop.cpp  Inventory.cpp  Inventory.h  LoadLevel.cpp  LoadLevel.h  Mission.cpp  Mission.h  NewPyroGauges.cpp  NewPyroGauges.h  ObjInit.cpp  ObjScript.cpp  ObjScript.h  OsirisLoadandBind.cpp  (+255 more)
bitmap/: CMakeLists.txt  NewBitmap.cpp  NewBitmap.h  bitmain.cpp  bitmap.cpp  bitmap.h  bumpmap.cpp  bumpmap.h  iff.cpp  iff.h  lightmap.cpp  lightmap.h  pcx.cpp  tga.cpp
cfile/: CFILE.cpp  CMakeLists.txt  InfFile.cpp  cfile.cpp  cfile.h  default_base_directories.cpp.in  default_base_directories.h  default_base_directories.h.in  hog.cpp  hogfile.cpp  hogfile.h  inffile.cpp  inffile.h
d3music/: CMakeLists.txt  musicapi.cpp
dd_grwin32/: CMakeLists.txt  ddgrWin32.h  ddgrWin32API.cpp  ddgrWin32DX.cpp  ddgrWin32DX.h  ddgrWin32GDI.cpp  ddgrWin32GDI.h  ddgrWin32Init.cpp
dd_video/: CMakeLists.txt  ddvid.h  ddvidlib.h  vidWin32FS.cpp  vidWin32Win.cpp  video_lnx.cpp  video_win32.cpp
ddebug/: CMakeLists.txt  debug.cpp  debug.h  debugbreak.h  error.cpp  lnxdebug.cpp  lnxmono.cpp  macdebug.cpp  mono.h  pserror.h  windebug.cpp  winmono.cpp
ddio/: CMakeLists.txt  Controller.h  appdatabase.h  application.h  chrono_timer.cpp  chrono_timer.h  controller.cpp  controller.h  ddio.cpp  ddio.h  ddio_common.h  ddio_lnx.h  ddio_win.h  file.cpp  forcefeedback.h  joystick.h  key.cpp  lnxcdrom.cpp  lnxcontroller.h  lnxfile.cpp  lnxforcefeedback.cpp  lnxio.cpp  lnxkey.cpp  lnxkey_null.cpp  lnxkey_sdl.cpp  lnxmouse.cpp  lnxtimer.cpp  sdlcontroller.cpp  sdlcontroller.h  sdljoy.cpp  sdltouch.cpp  sdltouch.h  winfile.cpp  winforcefeedback.cpp  winio.cpp  winjoy.cpp  winkey.cpp  winmouse.cpp  wintimer.cpp
editor/: AISettingsDlg.cpp  AISettingsDlg.h  AddScriptDialog.cpp  AddScriptDialog.h  AmbientSoundElement.cpp  AmbientSoundElement.h  AmbientSoundPattern.cpp  AmbientSoundPattern.h  AnimStatesDialog.cpp  AnimStatesDialog.h  BriefBitmapEdit.cpp  BriefBitmapEdit.h  BriefButtonEdit.cpp  BriefButtonEdit.h  BriefEdit.cpp  BriefEdit.h  BriefManage.cpp  BriefManage.h  BriefMissionFlagsDlg.cpp  BriefMissionFlagsDlg.h  BriefMovieEdit.cpp  BriefMovieEdit.h  BriefScreenEdit.cpp  BriefScreenEdit.h  BriefSoundEdit.cpp  BriefSoundEdit.h  BriefTextEdit.cpp  BriefTextEdit.h  CMakeLists.txt  CreateNewScriptDlg.cpp  CreateNewScriptDlg.h  CustDefaultScriptSelect.cpp  CustDefaultScriptSelect.h  CustomObjectDialog.cpp  CustomObjectDialog.h  D3Splash.cpp  D3Splash.h  D3XStringEditor.cpp  D3XStringEditor.h  DallasFlagDlg.cpp  (+251 more)
grtext/: CMakeLists.txt  grfont.cpp  grtext.cpp  grtext.h  grtextlib.h  textaux.cpp
libacm/: Aencode.h  CMakeLists.txt  adecode.cpp  aencode.cpp  aencode.h  decode.c  libacm.cpp  libacm.h  libacm.vcproj  util.c
libmve/: CMakeLists.txt  SystemInterfaces.h  decoder16.c  decoder16.cpp  decoder8.c  decoder8.cpp  decoders.h  libmve.h  lnx_sound.cpp  lnx_sound.h  lnxdsound.cpp  lnxdsound.h  movie_sound.cpp  movie_sound.h  mve.asm  mve_audio.c  mve_audio.cpp  mve_audio.h  mveasm.cpp  mvegfx.h  mvelib.c  mvelib.cpp  mvelib.h  mvelibi.h  mvelibl.cpp  mvelibl.h  mvelibwa.asm  mveplay.c  mveplay.cpp  platform.cpp  platform.h  snd8to16.h  sound_interface.h  win_sound.cpp  win_sound.h
linux/: CMakeLists.txt  DynXLib.cpp  linux_fix.h  lnxapp.cpp  lnxapp.h  lnxcon.cpp  lnxcon.hpp  lnxcon_null.cpp  lnxcon_raw.cpp  lnxcontroller.cpp  lnxcontroller.h  lnxdata.cpp  lnxdatabase.cpp  lnxdatabase.h  lnxdebug.cpp  lnxmono.cpp  lnxtask.cpp  oelnx_os.h  registry.cpp  registry.h
manage/: CMakeLists.txt  doorpage.cpp  doorpage.h  gamefilepage.cpp  gamefilepage.h  generic.cpp  genericpage.h  manage.cpp  manage.h  manage_external.h  megapage.cpp  megapage.h  pagelock.cpp  powerpage.h  robotpage.h  shippage.cpp  shippage.h  soundpage.cpp  soundpage.h  texpage.cpp  texpage.h  weaponpage.cpp  weaponpage.h
mem/: CMakeLists.txt  mem.cpp  mem.h
misc/: CMakeLists.txt  endian.cpp  error.cpp  holder.h  log.cpp  log.h  logfile.cpp  logfile.h  pserror.h  psglob.cpp  psglob.h  psrand.cpp  psrand.h  pstring.cpp  pstring.h
model/: CMakeLists.txt  newstyle.cpp  polymodel.cpp  polymodel.h  polymodel_external.h
movie/: CMakeLists.txt  d3movie.cpp  movie.cpp  movie.h
music/: CMakeLists.txt  music.h  musiclib.h  omflex.cpp  sequencer.cpp  streamer.cpp  tracklist.cpp
netgames/: CMakeLists.txt  anarchy.d3m  coop.d3m  ctf.d3m  entropy.d3m  hoard.d3m  hyperanarchy.d3m  monsterball.d3m  roboanarchy.d3m  tanarchy.d3m
networking/: CMakeLists.txt  directplay.cpp  directplay.h  networking.cpp  networking.h
physics/: CMakeLists.txt  Collide.cpp  FindIntersection.cpp  collide.cpp  collide.h  findintersection.cpp  findintersection.h  findintersection_external.h  newstyle_fi.cpp  physics.cpp  physics.h
renderer/: 3d.h  CMakeLists.txt  Direct3D.cpp  HardwareBaseGPU.cpp  HardwareBaseGPU.h  HardwareClipper.cpp  HardwareDraw.cpp  HardwareGlobalVars.cpp  HardwareInstance.cpp  HardwareInternal.h  HardwareOpenGL.cpp  HardwarePoints.cpp  HardwareSetup.cpp  HardwareTransforms.cpp  RendererConfig.h  SDLHelpers.cpp  SDLHelpers.h  clipper.cpp  (+40 more)
(+1678 files in other folders)
